# chatchat

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: main.yml
chatchat/: __init__.py  __main__.py  agent.py  alibaba.py  baidu.py  base.py  client.py  config.py  deepseek.py  google.py  hook.py  response.py  skill.py  tencent.py  tool.py  types.py  utils.py  vendor.py  xunfei.py  zhipu.py
chatchat/cli/: chat.py  config.py
chatchat/providers/: __init__.py  agnes.py  alibaba.py  baidu.py  deepseek.py  google.py  openrouter.py  tencent.py  xunfei.py  zhipu.py
examples/: SKILL.md  agent.py  ai.py  alibaba_chat.py  alibaba_completion.py  baidu.py  baidu_chat.py  baidu_completion.py  client.py  deepseek_chat.py  deepseek_completion.py  google_chat.py  google_completion.py  interact.py  progress.py  skill.py  tencent_chat.py  tencent_completion.py  tool.py  xunfei.py  xunfei_chat.py  xunfei_completion.py  zhipu_chat.py  zhipu_completion.py
tests/: test_custom_provider.py
