[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chatchat"
dynamic = ["version"]
description = "Large Language Models Python API"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = [
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = ['Artificial Intelligence']
requires-python = ">=3.10"
dependencies = ['conippets>=0.1.8', 'httpx']

[project.urls]
Homepage = "https://github.com/jiauzhang/chatchat"

[project.scripts]
chatchat = "chatchat.__main__:main"

[tool.hatch.version]
path = "chatchat/version.py"

[tool.hatch.build.targets.wheel]
packages = ["chatchat"]
